# new_admin_panel_sprint_3

./: .env.exempel  .env_exemple  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  fixtures.json  requirements.txt
app/config/: settings.py  urls.py
app/config/components/: database.py  installed_apps.py  middleware.py
app/movies/: admin.py  models.py
app/movies/api/v1/: views.py
app/movies/locale/en/LC_MESSAGES/: django.po
app/movies/locale/ru/LC_MESSAGES/: django.po
app/movies/migrations/: 0001_initial.py
config/: settings.py
dev/: create_shcema.py
etl/: main.py  models.py
etl/connector/: elastic.py  postgres.py
etl/pg_to_es/: main.py
etl/postgres_to_elastic/: extract.py  models.py
etl/sqlite_to_pg/: models.py
etl/sqlite_to_postgres/: settings.py
etl_d/: settings.py  state.py
etl_d/connector/: elastic.py  postgres.py
etl_d/postgres_to_elastic/: create_index.py  extract.py  models.py
etl_d/sqlite_to_postgres/: load_data.py  test.py
nginx/: Dockerfile  site.conf
pg_to_es/: Dockerfile  main.py  model.py  requirements.txt  settings.py  state.py  storage.json
pg_to_es/conectors/: es_db.py  pg_db.py
pg_to_es/connectors/: es_db.py  pg_db.py
pg_to_es/extractors/: movies.py
pg_to_es/loaders/: movies.py
pg_to_es/transforms/: movies.py
pg_to_es/utility/: backoff.py
postgres_to_es/utils/: backoff.py  comeon.py
postgres_to_es/utils/database/: postgres.py
sync_data/: fw_models.py  mian.py  models.py  postgres_to_elastic.py
sync_data/database/: elastic.py  postgres.py  sqlite.py
sync_data/el/: create_index.py  main.py
sync_data/utils/: backoff.py  comehere.py
utility/: es_schema.txt  openapi.yml
